--- a/creativity.html
+++ b/creativity.html
@@ -74,41 +74,41 @@
                 data-bs-target="#navbarContent"
                 aria-controls="navbarContent"
               >
-                <a class="nav-link text-light float-end"
-                  ><i class="bi bi-x me-5 fs-4"></i
-                ></a>
+                <a class="nav-link text-light float-end">
+                  <i class="bi bi-x me-5 fs-4"></i>
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html"
-                  ><i class="bi bi-house-fill"></i> Home</a
-                >
+                <a class="nav-link" href="index.html">
+                  <i class="bi bi-house-fill"></i> Home
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="creativity.html"
-                  ><i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft</a
-                >
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="register.html"
-                  ><i class="bi bi-journal-plus"></i> Cadastrar</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html"
-                  ><i class="bi bi-key-fill"></i> Logar</a
-                >
+                <a class="nav-link" onclick="window.sessionStorage.removeItem('craftArtsId')" href="creativity.html">
+                  <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
+                </a>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="myCrafts.html"
-                  ><i class="bi bi-images"></i> Meus Crafts</a
-                >
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="register.html">
+                  <i class="bi bi-journal-plus"></i> Cadastrar
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link"
-                  ><i class="bi bi-door-open-fill"></i> Sair</a
-                >
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="login.html">
+                  <i class="bi bi-key-fill"></i> Logar
+                </a>
+              </li>
+
+              <li class="nav-item item-log">
+                <a class="nav-link" href="myCrafts.html">
+                  <i class="bi bi-images"></i> Meus Crafts
+                </a>
+              </li>
+              <li class="nav-item item-log">
+                <a class="nav-link" href="index.html" onclick="logout()">
+                  <i class="bi bi-door-open-fill"></i> Sair
+                </a>
               </li>
             </ul>
             <div
@@ -177,6 +177,12 @@
     </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-firestore.js"></script>
+
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/dataCraft.js"></script>
     <script src="assets/js/creativity.js"></script>
   </body>
 </html>
