--- a/login.html
+++ b/login.html
@@ -27,34 +27,98 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-primary">
-            <div class="container-fluid">
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
-                    <i class="bi bi-list"></i>
-                </button>
-                <div class="collapse fixed-top navbar-collapse bg-light" id="navbarContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item nav-item-first" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent"><a class="nav-link text-light float-end"><i class="bi bi-x me-5 fs-4"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-fill"></i> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="creativity.html"><i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft</a></li>
+      <nav class="navbar navbar-primary">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler ms-auto"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarContent"
+            aria-controls="navbarContent"
+          >
+            <i class="bi bi-list"></i>
+          </button>
+          <div
+            class="collapse fixed-top navbar-collapse bg-light"
+            id="navbarContent"
+          >
+            <ul class="navbar-nav">
+              <li
+                class="nav-item nav-item-first"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarContent"
+                aria-controls="navbarContent"
+              >
+                <a class="nav-link text-light float-end">
+                  <i class="bi bi-x me-5 fs-4"></i>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  <i class="bi bi-house-fill"></i> Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" onclick="window.sessionStorage.removeItem('craftArtsId')" href="creativity.html">
+                  <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
+                </a>
+              </li>
 
-                        <li class="nav-item"><a class="nav-link" href="register.html"><i class="bi bi-journal-plus"></i> Cadastrar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html"><i class="bi bi-key-fill"></i> Logar</a></li>
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="register.html">
+                  <i class="bi bi-journal-plus"></i> Cadastrar
+                </a>
+              </li>
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="login.html">
+                  <i class="bi bi-key-fill"></i> Logar
+                </a>
+              </li>
 
-                        <li class="nav-item"><a class="nav-link" href="myCrafts.html"><i class="bi bi-images"></i> Meus Crafts</a></li>
-                        <li class="nav-item"><a class="nav-link"><i class="bi bi-door-open-fill"></i> Sair</a></li>
-                    </ul>
-                    <div style="height: 100vh; width: 100%;" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
-
-                    </div>
-                </div>
-            </div>
-        </nav>
+              <li class="nav-item item-log">
+                <a class="nav-link" href="myCrafts.html">
+                  <i class="bi bi-images"></i> Meus Crafts
+                </a>
+              </li>
+              <li class="nav-item item-log">
+                <a class="nav-link" href="index.html" onclick="logout()">
+                  <i class="bi bi-door-open-fill"></i> Sair
+                </a>
+              </li>
+            </ul>
+            <div
+              style="height: 100vh; width: 100%"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarContent"
+              aria-controls="navbarContent"
+            ></div>
+          </div>
+        </div>
+      </nav>
         <section class="text-center">
-            <h1>LOGIN</h1>
+          <img class="sub-logo" src="assets/img/craftmakr-logo.svg" />
+        </section>
+        <section class="d-flex flex-column align-items-center">
+          <h1>Bem vindo de volta</h1>
+          <p class="text-justify">
+              <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" />
+              </div>
+              <div class="mb-3">
+                  <label for="password" class="form-label">Senha</label>
+                  <input type="password" class="form-control" id="password" />
+              </div>
+              <button class="btn btn-primary" onclick="logDataUser()">Entrar</button>
+          </p>
         </section>
     </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-firestore.js"></script>
+    
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
